--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Silber\\Bouncer\\": "src/"
+            "Silber\\Bouncer\\": "packages/Silber/Bouncer/src/"
         }
     },
     "autoload-dev": {
